optimized query and started to implementing JWT
